Fixing bugs on mobile and reducing the logo size

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -419,7 +419,7 @@ header {
   text-align: center;
 
   .logo img {
-    height: 6em;
+    height: 5em;
     max-width: none;
 
     &:hover {
@@ -432,7 +432,7 @@ header {
 
   @media only screen and (max-width: 600px) {
     .logo img {
-      min-height: 4em;
+      height: 3.5em;
       max-width: none;
       transition: font-size 0.3s ease;
     }
@@ -1348,8 +1348,14 @@ h2.section-title {
 /*
 /*****************************************************************************/
 
+html {
+  background: $light-header-background;
+  color-scheme: light;
+}
+
 html[data-theme="dark"] {
   background: #0e1923;
+  color-scheme: dark;
 }
 
 [data-theme="dark"] {
